--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/websockets": "^10.4.5",
     "@prisma/client": "^5.19.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "joi": "^17.13.3",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
