--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -13,7 +13,11 @@ jobs:
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
       - name: Build docker image
-        run: docker build -t anderson383/bus-fet-backend .
+        run: docker build \
+          --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }} \
+          --build-arg AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} \
+          --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+          -t anderson383/bus-fet-backend .
       - name: Publish image to docker hub
         run: docker push anderson383/bus-fet-backend:latest
         
